--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 Die Dokumentation ist unter http://doc.gartenzwerge.verbunden.net zu finden!
+
+Testweb: http://gartenzwerge.verbunden.net
+
+Testnutzer: test@verbunden.net (Passwort: test)
+Testadmin: admin@verbunden.net (Passwort: admin)
