--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Die Dokumentation ist unter http://doc.gartenzwerge.verbunden.net zu finden!
 
-Testweb: http://gartenzwerge.verbunden.net
+Testweb: http://www.gartenzwerge24.eu
 
-Testnutzer: test@verbunden.net (Passwort: test)
-Testadmin: admin@verbunden.net (Passwort: admin)
+Testnutzer: test@gartenzwerge24.eu (Passwort: gartenzwerge)
+Testadmin: admin@gartenzwerge24.eu (Passwort: gartenzwerge)
